--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <li><a href="./umijs/umijs.org/zh-CN.htm">umijs</a></li>
         <li><a href="./dvajs/dvajs.com/index.htm">dvajs</a></li>
     </ul>
+    <ul>
+        <li><a href="./ant-design-pro-layout/index.html"ant-design-pro-layout></a></li>
+    </ul>
 </body>
 </html>
