--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="./dvajs/dvajs.com/index.htm">dvajs</a></li>
     </ul>
     <ul>
-        <li><a href="./ant-design-pro-layout/index.html"ant-design-pro-layout></a></li>
+        <li><a href="./ant-design-pro-layout/index.html">ant-design-pro-layout</a></li>
     </ul>
 </body>
 </html>
