--- a/ant-design-pro-layout/index.html
+++ b/ant-design-pro-layout/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/umi.4e531e7e.css" />
+    <link rel="stylesheet" href="./umi.4e531e7e.css" />
     <script>
       window.routerBase = "/";
     </script>
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.36b3e3b3.js"></script>
+    <script src="./umi.36b3e3b3.js"></script>
   </body>
 </html>
