--- a/ant-design-pro-layout/index.html
+++ b/ant-design-pro-layout/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="stylesheet" href="./umi.4e531e7e.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/ant-design-pro-layout/";
     </script>
     <script>
       //! umi version: 3.2.3
