--- a/ant-d-pro-table/index.html
+++ b/ant-d-pro-table/index.html
@@ -8,7 +8,7 @@
     />
     <link rel="stylesheet" href="./umi.8b74bf68.css" />
     <script>
-      window.routerBase = "/ant-d-pro-table/";
+      window.routerBase = "./";
     </script>
     <script>
       //! umi version: 3.2.3
