--- a/ant-design-pro-layout/404.html
+++ b/ant-design-pro-layout/404.html
@@ -8,7 +8,7 @@
     />
     <link rel="stylesheet" href="/umi.4e531e7e.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/ant-d-design-pro-layout/";
     </script>
     <script>
       //! umi version: 3.2.3
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.36b3e3b3.js"></script>
+    <script src="/umi.8321617d.js"></script>
   </body>
 </html>
