--- a/ant-design-pro-layout/index.html
+++ b/ant-design-pro-layout/index.html
@@ -8,10 +8,10 @@
     />
     <link
       rel="stylesheet"
-      href="/lseyesl.github.io/ant-d-design-pro-layout/umi.4e531e7e.css"
+      href="/ant-d-design-pro-layout/umi.4e531e7e.css"
     />
     <script>
-      window.routerBase = "/lseyesl.github.io/ant-d-design-pro-layout/";
+      window.routerBase = "/ant-d-design-pro-layout/";
     </script>
     <script>
       //! umi version: 3.2.3
@@ -20,6 +20,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/lseyesl.github.io/ant-d-design-pro-layout/umi.e940ce6d.js"></script>
+    <script src="/ant-d-design-pro-layout/umi.e940ce6d.js"></script>
   </body>
 </html>
