--- a/ant-design-pro-layout/example/index.html
+++ b/ant-design-pro-layout/example/index.html
@@ -13,7 +13,7 @@
     <script>
       //! umi version: 3.2.3
     </script>
-    <title>&#x4ECB;&#x7ECD;</title>
+    <title>Example &#x5C55;&#x793A;</title>
   </head>
   <body>
     <div id="root"></div>
