--- a/ant-design-pro-layout/index.html
+++ b/ant-design-pro-layout/index.html
@@ -6,20 +6,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link
-      rel="stylesheet"
-      href="/ant-d-design-pro-layout/umi.4e531e7e.css"
-    />
+    <link rel="stylesheet" href="/ant-d-design-pro-layout/umi.4e531e7e.css" />
     <script>
-      window.routerBase = "/ant-d-design-pro-layout/";
+      window.routerBase = "/ant-d-design-pro-layout";
     </script>
     <script>
       //! umi version: 3.2.3
     </script>
+    <title>&#x4ECB;&#x7ECD;</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="/ant-d-design-pro-layout/umi.e940ce6d.js"></script>
+    <script src="/ant-d-design-pro-layout/umi.2efe8f73.js"></script>
   </body>
 </html>
