--- a/ant-design-pro-layout/menu/index.html
+++ b/ant-design-pro-layout/menu/index.html
@@ -13,7 +13,7 @@
     <script>
       //! umi version: 3.2.3
     </script>
-    <title>&#x4ECB;&#x7ECD;</title>
+    <title>menu &#x7684;&#x76F8;&#x5173;&#x80FD;&#x529B;</title>
   </head>
   <body>
     <div id="root"></div>
